# purrboss

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yaml  docker-entrypoint.sh  fly.toml
cmake/: ProtoGen.cmake
db/: schema.sql
db/migrations/: 20260718191300_01_init.sql
src/: purrboss.cc
src/purrboss/services/: session.hpp
src/purrboss/services/session/: create_session.cpp  invalidate_session.cpp  ping.cpp  session-test.cc  tools-test.cc  tools.cpp  tools.hpp  validate_session.cpp
src/purrboss/storage/: database-test.cc  database.cpp  database.hpp
src/purrboss/testing/: sqlite_test_database.hpp
